# pokemon-api-ai

./: .env.example  .gitignore  README.md  README_UPDATE.md  config.json  doc.md  doc.txt  docker-compose.yml  exemplo_modificacao.txt  pyproject.toml  requirements.txt
agent/: .dockerignore  Dockerfile  agent_app.py  config.py  core.py  entrypoint.sh  logger.py  prompts.py  requirements.txt  telemetry.py  tools.py
agent/tests/: conftest.py  test_agent_interactions.py  test_config.py  test_core.py  test_entrypoint.py  test_logging_propagation.py  test_ws_integration.py
airflow/: Dockerfile  requirements.txt
airflow/dags/: README.md  etl_dag.py  model_etl_dag.py  pokemon_etl_dag.py
api/: Dockerfile  database.py  logger.py  main.py  requirements.txt  schemas.py  telemetry.py
api/repositories/: base.py  pokemon.py
api/services/: pokemon.py
api/tests/: test_contract.py
common/: config.py  logger.py  telemetry.py
data/raw/: pokemon_data.json
db/: init.sql
etl/: Dockerfile  extract.py  load.py  main.py  requirements.txt  transform.py
scripts/: Dockerfile  app.py  config.py  etl.py  fetch_pokemon_data.py  init_git_repo.sh  install_project.sh  requirements.txt  run_pipeline.sh  setup_dev_env.sh  sync_git.sh  sync_repo.sh
tests/: load_test_ws_async.py  test_schemas.py
