[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon-api-ai"
version = "0.1.0"
description = "A localized Pokemon API AI Agent"
authors = [{name = "Antigravity", email = "antigravity@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests",
    "openai",
    "python-dotenv",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "agent/tests",
    "api/tests"
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
